Update revealable content

--- a/libs/jade/modules/revealable.jade
+++ b/libs/jade/modules/revealable.jade
@@ -17,11 +17,12 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Revealable sections allow you to hide content that isn’t applicable to most people visiting the page, but will still be relevant to some. This is a great way of making the page more succinct and easier to scan.
+			p Revealable sections allow you to ‘hide’ content that’s only relevant to some people visiting the page. 
+			p The ‘hidden’ content sits under a clickable h3 heading. Once clicked, the rest of the content is revealed.
+			p They’re a great way to make a page easier to read - people can scan through quickly.
+			p Bear in mind that hidden content can be easy for people to miss, so use the revealables sparingly - you should aim to use no more than 4 per page.
+			p Content within the revealables is unlikely to be indexed in search engines. The 'toggle title' - the title inside the revealable - will be, so make sure it’s clear and descriptive.
 
-			p Keep in mind when creating content that the content of revealables will most likely not be indexed in search engines, however the 'Toggle title' will be, so this is very important to be clear and descriptive. You also shouldn't use more than 4 accordions per page.
-
-			p Keep in mind hidden content can also be easy for users to miss, so they should be used sparingly or only with a good reason.
 			.example-box-plain
 				section.revealable
 					h3 Unstyled content inside header/toggle
