Update sticky content page

--- a/libs/jade/modules/sticky.jade
+++ b/libs/jade/modules/sticky.jade
@@ -17,7 +17,7 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Notices stick to the top of the screen if the user scrolls past them.  The notice is contained within its parent.
+			p A sticky box contains important information. It stays at the top when the user scrolls down and is always visible.
 
 			.example-box-plain(style="height:800px")
 				.box--sticky.js-make-sticky
