--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -278,4 +278,5 @@
 @i-twitter: 				"\e60d";
 @i-undo:                    "\e626";
 @i-vertical-dots:			"\e901";
+@i-pin:						"\e902";
 @i-zws: 					"_";
