--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1237,6 +1237,10 @@ div.tooltip:before {
         content: @i-vertical-dots;
     }
 
+    .i-pin .icon:before {
+        content: @i-pin;
+    }
+
     .brand-accelerator .icon-brand:before {
         content: @brand-accelerator;
     }
