--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -33,11 +33,6 @@ block content
 						td key
 						td.variable @i-key
 						td.unicode \e900
-					tr.i-undo
-						td.icon
-						td undo
-						td.variable @i-undo
-						td.unicode \238c
 					tr.i-target
 						td.icon
 						td target
@@ -323,3 +318,8 @@ block content
 						td vertical dots
 						td.variable @i-vertical-dots
 						td.unicode \e901
+					tr.i-pin
+						td.icon
+						td pin
+						td.variable @i-pin
+						td.unicode \e902
