Fixed bug causing charts to not show by looking in the wrong place for JS. Fixed by adding #{dir}

--- a/libs/jade/modules/charts.jade
+++ b/libs/jade/modules/charts.jade
@@ -15,8 +15,8 @@ block sidebar
 	include /template/sidebar-modules.jade
 
 block script
-	script(src="js/vendor/highcharts/highcharts.js")
-	script(src="js/vendor/highcharts/modules/exporting.js")
+	script(src="#{dir}js/vendor/highcharts/highcharts.js")
+	script(src="#{dir}js/vendor/highcharts/modules/exporting.js")
 	script.
 		// Column chart
 		$(function () {
