First commit of pinbar feature

--- a/libs/site.less
+++ b/libs/site.less
@@ -81,6 +81,7 @@
 @import "modules/adviser";
 @import "modules/notice";
 @import "modules/slide";
+@import "modules/pinbar";
 
 /* IE styles */
 @import "base/ie";
