Update content fields

--- a/libs/jade/forms/fields.jade
+++ b/libs/jade/forms/fields.jade
@@ -17,7 +17,7 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Forms can help people find the information they need, complete a task or complete an application online. By making forms easy to use will ensure greater completion rates for clients with the most accurate information possible.
+			p Forms can help people find the information they need, complete a task or complete an application online. 
 
 			p Ask for the minimum amount of information needed for the client to complete the task, this makes the forms shorter, and improves completion rates. Make clear that optional fields are optional.
 
