--- a/libs/jade/modules/notice.jade
+++ b/libs/jade/modules/notice.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Browser notice"
+	- var title = "Browser warning"
 	- var sidebar = true
 	- var dir = "../"
 
@@ -9,7 +9,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "/index.html"},
 		{title: "Modules", href: "/index.html#Modules"},
-		{title: "Browser notice"}])
+		{title: "Browser warning"}])
 
 block sidebar
 	include /template/sidebar-modules.jade
