Fixed black visited background on safari, bug was caused by background being undefined for visited

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -27,7 +27,8 @@
 	overflow: visible;
 	background-color: none;
 
-	.active {
+	.active,
+	.active:visited {
 		background-color: @heritage-blue-lightest;
 	}
 
