Minor changes to some wording in style pages. Also fixed the link to the collapsible table JS

--- a/libs/jade/styles/colours.jade
+++ b/libs/jade/styles/colours.jade
@@ -29,7 +29,7 @@ block content
 			.newrow
 				.span12
 					h3 Colour contrast
-					p The colour contrast ratio for text and interactive elements (for example #[a(href="../forms/buttons.html") buttons]) should be at least #[a(href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html") as recommended by the W3C].
+					p The colour contrast ratio for text and interactive elements (for example #[a(href="../forms/buttons.html") buttons]) should be #[a(href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html") as recommended by the W3C].
 					h3 Brand
 					p The colours are defined in the #[a(href="https://drive.google.com/file/d/0B8v_MHuoZPI2NmVBVThBSnFSeTQ/view?usp=sharing") Brand Guidelines]. Use them in these pairs.
 			.newrow
