--- a/libs/jade/styles/tables.jade
+++ b/libs/jade/styles/tables.jade
@@ -15,7 +15,7 @@ block sidebar
 	include /template/sidebar-styles.jade
 
 block script
-	script(src="js/table-collapse.js")
+	script(src="#{dir}js/table-collapse.js")
 
 block content
 	.articleContent
