--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -17,8 +17,8 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Icons are used for clarity and quick recognition of functions. It’ is important that these icons are used as css content on an element, and this can easily be done by using their variable in the LESS.
-			p In the rare case that an icon is included as an element, it’s important to hide the tag from screenreader. This can be done using the #[code.code aria-hidden="true"] attribute.
+			p Icons are used for clarity and quick recognition of functions. It’ is important that these icons are used as CSS content on an element, and this can easily be done by using their variable in the LESS.
+			p In the rare case that an icon is included as an element, it’s important to hide it screenreaders. This can be done using the #[code.code aria-hidden="true"] attribute.
 			p These icons are all included in an icon font called cab-icons.
 			table.iconlist
 				thead
