Finishing working tweaks for styleguide pages. Renamed notice.jade > browser-warning.jade for clarity

--- a/libs/jade/modules/browser-warning.jade
+++ b/libs/jade/modules/browser-warning.jade
@@ -9,7 +9,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
 		{title: "Modules", href: dir + "index.html#Modules"},
-		{title: "Browser notice"}])
+		{title: "Browser warning"}])
 
 block sidebar
 	include /template/sidebar-modules.jade
