--- a/libs/jade/styles/typography.jade
+++ b/libs/jade/styles/typography.jade
@@ -17,8 +17,8 @@ block sidebar
 block content
 	.articleContent
 		div
-			p We use #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] - it’s a sans-serif font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using 4 of these.
-			p When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.
+			p We use #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] - it’s a sans-serif font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but we only use 4 of these.
+			p When calling in the font weights or any of the typographic styles in LESS, be sure to use the variable rather than the font weight directly.
 			p(style="font-weight: 400;") Open Sans 400
 				span.code @font-weight-base
 			p(style="font-weight: 600;") Open Sans 600
