--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -6,7 +6,7 @@
 	{href: "section-notice.html", title: "Section Notices"},
 	{href: "toolbar.html", title: "Content toolbar"},
 	{href: "cookie-monster.html", title: "Cookie Monster"},
-	{href: "notice.html", title: "Browser notice"},
+	{href: "browser-warning.html", title: "Browser warning"},
 	{href: "sticky.html", title: "Sticky box"},
 	{href: "extent.html", title: "Extent Switcher"}
 	//{href: "overlay.html", title: "Modal/Overlay"},
