--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -62,7 +62,7 @@ block content
 					li
 						a(href="modules/cookie-monster.html") Cookie Monster
 					li
-						a(href="modules/notice.html") Browser notice
+						a(href="modules/browser-warning.html") Browser warning
 					li
 						a(href="modules/sticky.html") Sticky box
 					li
@@ -72,7 +72,7 @@ block content
 					//li
 						a(href="modules/reference.html") Reference tool
 			.span4-sm
-				h2#Brand Branding
+				h2#Branding Branding
 				ul
 					li
 						a(href="branding/brand-icons.html") Brand icons
