Removed pin icon in favour of circle with tick

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -278,5 +278,6 @@
 @i-twitter: 				"\e60d";
 @i-undo:                    "\e626";
 @i-vertical-dots:			"\e901";
-@i-pin:						"\e902";
+@i-circle:					"\e902";
+@i-circle-check:			"\e903";
 @i-zws: 					"_";
