--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1237,8 +1237,12 @@ div.tooltip:before {
         content: @i-vertical-dots;
     }
 
-    .i-pin .icon:before {
-        content: @i-pin;
+    .i-circle .icon:before {
+        content: @i-circle;
+    }
+
+    .i-circle-check .icon:before {
+        content: @i-circle-check;
     }
 
     .brand-accelerator .icon-brand:before {
