--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -318,8 +318,13 @@ block content
 						td vertical dots
 						td.variable @i-vertical-dots
 						td.unicode \e901
-					tr.i-pin
+					tr.i-circle
 						td.icon
-						td pin
-						td.variable @i-pin
+						td circle
+						td.variable @i-circle
 						td.unicode \e902
+					tr.i-circle-check
+						td.icon
+						td circle-check
+						td.variable @i-circle-check
+						td.unicode \e903
