--- a/libs/modules/pinbar.less
+++ b/libs/modules/pinbar.less
@@ -1,24 +1,77 @@
 .pinbar {
-	position: fixed;
-	bottom: .5rem;
-	background: @heritage-yellow-lighter;
+	bottom: 0;
+	background: @green-lighter;
+	border: 2px solid @green-light;
+	border-width: 2px 2px 0 0;
 	padding: @box-spacing-vertical @box-spacing-horizontal;
-	border-radius: @form-border-radius;
-	margin-left: .5rem;
+	z-index: 1;
+	cursor: pointer;
+	color: @black;
 	&:before {
 		.icon;
-		content: @i-pin;
-		margin-right: .5rem;
+		content: @i-circle-check;
+		padding-right: .25rem;
+	}
+	&:hover {
+		background-color: @green-light;
+		//color: @white;
+	}
+
+	margin-left: 0;
+	left: 0;
+	position: fixed;
+	border-radius: 0 @form-border-radius 0 0;
+	@media (min-width: 600px) and (max-width: 750px), (min-width: 1150px)  {
+		margin-left: -2rem;
+		left: auto;
+		position: fixed;
+		border-radius: @form-border-radius @form-border-radius 0 0;
+		border-width: 2px 2px 0 2px;
 	}
 }
 #pinmockup {
 	h1, h2, h3, h4 {
+		position: relative;
+		cursor: pointer;
 		&:before {
 			.icon;
-			content: @i-pin;
+			content: @i-circle;
+			color: @green-light;
+			//padding-top: 1em/4;
+			cursor: pointer;
 			margin-right: .15em;
-			color: @blue-light;
-			margin-left: -2rem;
+			display: inline-block;
+			@media (min-width: 600px) and (max-width: 750px), (min-width: 1150px) {
+				position: absolute;
+				margin-left: -2rem;
+				padding-top: .075rem;
+			}
+		}
+		&:hover:before {
+			//padding-top: 1em/5;
+			content: @i-circle-check;
+			//color: @green;
+		}
+		&.pinned:before {
+			//padding-top: 1em/5;
+			color: @green;
+			//transform: scaleX(-1);
+			content: @i-circle-check;
+		}
+	}
+	*[class^="callout"],
+	.dap-panel,
+	.box--sticky,
+	blockquote {
+		h1, h2, h3, h4 {
+			&:before {
+				position: relative;
+				margin-left: 0;
+				color: currentColor;
+			}
+			&.pinned:before {
+				color: currentColor;
+			}
 		}
 	}
 }
