--- a/libs/jade/dev/footer.jade
+++ b/libs/jade/dev/footer.jade
@@ -1,171 +1,20 @@
-include /template/mixins.jade
 block settings
-doctype html
-html.no-js
-    head
-        meta(content="text/html; charset=utf-8", http-equiv="Content-Type")
-        meta(charset="utf-8")
-        meta(content="IE=edge", http-equiv="X-UA-Compatible")
-        meta(name="keywords")
-        meta(name="description")
+	- var title = "New footer"
+	- var sidebar = true
+	- var dir = "../"
+	- var mockup = true
+	- var newfoot = true
 
-        title Citizens Advice style guide
+extends /template/template.jade
 
-        // Mobile Specific Metas
-        meta(content="width=device-width, initial-scale=1, maximum-scale=2.0", name="viewport")
-        meta(content="48a2415d-980f-4763-a5b9-e10e000636b3", name="cab-guid")
-        meta(content="EWS", name="cab-extent")
-        meta(content="/static/images/apple-touch-icon.png")
-        meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
+block breadcrumbs
+	+breadcrumbs([
+		{title: "Home", href: dir + "index.html"},
+		{title: "Modules", href: dir + "index.html#Modules"},
+		{title: "New footer"}])
 
-        // Stylesheets
-        link(href="css/guide.css", rel="stylesheet")
-        link(href="images/favicon/32.png", rel="shortcut icon")
-        link(href="images/favicon/228.png", rel="apple-touch-icon")
+block sidebar
+	include /template/sidebar-modules.jade
 
-        script
-            include /js/head.js
-
-    body
-        <!--[if IE 8]><div class="ie8"><![endif]-->
-        .skip-nav
-            a.screenreader.screenreader--focusable Skip to content
-            a.screenreader.screenreader--focusable Skip to footer
-
-        header.main-header
-            .main-header__content
-                a.main-header__logo(href="index.html", title="Citizens Advice home")
-                    img(onerror="this.onerror=null;this.src='images/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="images/ca-logo_100px.svg" height="80")
-
-                    img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-white-280px.svg")
-
-                .main-header__links(data-track-zone="top-bar")
-                    a.main-header__menu-link.js-toggle-menu(href="")
-                        i.icon-menu
-                        | Menu
-
-                    nav.main-header__top-nav
-                        a(href="#") Cymraeg</a>
-                        a.hide-offline.main-header__login(href="")
-                            i.icon-key
-                            | Sign-in
-
-                    form.main-header__search.hide-offline(action="")
-                        label.screenreader(for="main-header__search__input") Search
-                        input#main-header__search__input.main-header__search__input(name="q", placeholder="", type="search")
-                        button.main-header__search__submit(title="Search", type="submit")
-                            i.icon-search.icon--no-text
-                            span.screenreader Search
-
-        nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
-            ul.nav-list-primary
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Benefits
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Work
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Debt and money
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Consumer
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Relationships
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Housing
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Law and rights
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Discrimination
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Tax
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Healthcare
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") Education
-                li.top-item.js-mega-menu(style="display: list-item;")
-                    a(href="#") More from us
-                li.nav-list-primary-more.js-more-menu(style="display: none;")
-                    a(href="#") More
-                        i.icon-down
-
-        .main-container
-            nav.main-breadcrumb
-                block breadcrumbs
-
-            block section-notice
-
-            .main-content
-                .main-content__right(id="main", role="main")
-                    .title
-                        h1.title__heading.js-ref
-                            span.title__title
-
-
-           .footer-feedback
-                h2.screenreader Feedback
-                .footer-feedback__content
-                    p Is there anything wrong with this page? #[a(href="#") Let us know].
-
-            #footer.main-footer(data-track-zone="footer")
-                .footer-content.flex-row
-                    .flex-column.col-xs-12.col-md-9
-                        h3 Get Advice
-                        .flex-row(style="padding: 0;")
-                            .col-xs-12.col-sm-4
-                                ul
-                                    li #[a(href="#") Benefits]
-                                    li #[a(href="#") Work]
-                                    li #[a(href="#") Debt and money]
-                                    li #[a(href="#") Consumer]
-
-                            .col-xs-12.col-sm-4
-                                ul
-                                    li #[a(href="#") Relationships]
-                                    li #[a(href="#") Housing]
-                                    li #[a(href="#") Law and rights]
-                                    li #[a(href="#") Discrimination]
-
-                            .col-xs-12.col-sm-4
-                                ul
-                                    li #[a(href="#") Tax]
-                                    li #[a(href="#") Healthcare]
-                                    li #[a(href="#") Education]
-                                    li #[a(href="#") A to Z of advice]
-
-                    .flex-column.col-xs-12.col-md-3
-                        h3 Information
-                        ul
-                            li #[a(href="#") Help]
-                            li #[a(href="#") Cymraeg]
-                            li #[a(href="#") Terms and conditions]
-                            li #[a(href="#") Privacy and cookies]
-
-                .footer--legal
-                    .footer--legal--content
-                        img(alt="", src="images/ca_wo-logo-100px.svg")
-                        p
-                            | Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
-                            br
-                            | Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
-
-        //.notice
-            .notice__content
-                p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider upgrading to #[a.a-external-link(href="https://www.google.co.uk/chrome") Google Chrome].
-
-        <!--[if IE 8]></div><![endif]-->
-        script(src="js/vendor/jquery-1.11.3.min.js")
-        script(src="js/translate.js")
-        script(src="js/jquery.fn.cssSlide.js")
-        script(src="js/revealable.js")
-        script(src="js/prism.js")
-        script(src="js/smooth.js")
-        script(src="js/jquery.fn.top-sticky.js")
-        //script(src="js/advisor.js")
-        script(src="js/sidebar.js")
-        //script(src="js/core.js")
-        script.
-            var filename = document.location.pathname.match(/[^\/]+$/)[0];
-            $(document).ready(function() {
-                $('.section-nav a[href="' + filename + '"]').addClass('active');
-            });
-        block script
-        block script-bottom
+block content
+	p dummy text
