--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -161,102 +161,144 @@ html.no-js
 				h2.screenreader Feedback
 				.footer-feedback__content
 					p Is there anything wrong with this page? #[a(href="#") Let us know].
+			if newfoot
+				#footer.main-footer(data-track-zone="footer")
+					.footer-content.flex-row
+						.flex-column.col-xs-12.col-md-9
+							h3 Get Advice
+							.flex-row(style="padding: 0;")
+								.col-xs-12.col-sm-4
+									ul
+										li #[a(href="#") Benefits]
+										li #[a(href="#") Work]
+										li #[a(href="#") Debt and money]
+										li #[a(href="#") Consumer]
 
-			#footer.main-footer(data-track-zone="footer")
-				.main-footer__content.flex-row.js-equal-height
-					.main-footer__box.col-md-3.col-sm-6
-						h2 Advice
-						ul.li--arrow
-							li
-								a(href="#") Benefits
-							li
-								a(href="#") Work
-							li
-								a(href="#") Debt and money
-							li
-								a(href="#") Consumer
-							li
-								a(href="#") Relationships
-							li
-								a(href="#") Housing
-							li
-								a(href="#") Law and rights
-							li
-								a(href="#") Discrimination
-							li
-								a(href="#") Tax
-							li
-								a(href="#") Healthcare
-							li
-								a(href="#") Education
-							li
-								a(href="#") A to Z of advice
+								.col-xs-12.col-sm-4
+									ul
+										li #[a(href="#") Relationships]
+										li #[a(href="#") Housing]
+										li #[a(href="#") Law and rights]
+										li #[a(href="#") Discrimination]
 
-					.main-footer__box.col-md-3.col-sm-6
-						h2 Resources and tools
-						ul.li--arrow
-							li
-								a(href="#") Budgeting tool
-							li
-								a(href="#") Advice fact sheets
-							li
-								a(href="#") Advice online, by phone and in person
+								.col-xs-12.col-sm-4
+									ul
+										li #[a(href="#") Tax]
+										li #[a(href="#") Healthcare]
+										li #[a(href="#") Education]
+										li #[a(href="#") A to Z of advice]
 
-					.main-footer__box.col-md-3.col-sm-6
-						h2 More from us
-						ul.li--arrow
-							li
-								a(href="#") About us
-							li
-								a(href="#") Annual reports
-							li
-								a(href="#") Contact us
-							li
-								a(href="#") Complaints
-							li
-								a(href="#") Blogs
-							li
-								a(href="#") Campaigns
-							li
-								a(href="#") Media
-							li
-								a(href="#") Policy research
-							li
-								a(href="#") Support us
-							li
-								a(href="#") Volunteering
-							li
-								a(href="#") Jobs
+						.flex-column.col-xs-12.col-md-3
+							h3 Information
+							ul
+								li #[a(href="#") Help]
+								li #[a(href="#") Cymraeg]
+								li #[a(href="#") Terms and conditions]
+								li #[a(href="#") Privacy and cookies]
 
-					.main-footer__box.col-md-3.col-sm-6
-						h2 About Citizens Advice
-						ul.li--arrow
-							li
-								a(href="#") How we provide advice
-							li
-								a(href="#") The difference we make
-							li
-								a(href="#") Support us
-							li
-								a(href="#") How Citizens Advice works
-							li
-								a(href="#") Accessibility
-							li
-								a(href="#") Disclaimer and copyright
-							li
-								a(href="#") Privacy and cookies
-
-					.main-footer__box.main-footer__box--copyright
-						div
+					.footer--legal
+						.footer--legal--content
+							img(alt="", src="#{dir}images/ca_wo-logo-100px.svg")
 							p
-								img(alt="", height="100", src="#{dir}images/ca-logo_100px.svg", width="100")
-								| Copyright © 2016 Citizens Advice. All rights reserved.
+								| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 								br
-								| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
-								br
-								| VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England
-								br
-								| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
+								| Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
+			else
+				#footer.main-footer(data-track-zone="footer")
+					.main-footer__content.flex-row.js-equal-height
+						.main-footer__box.col-md-3.col-sm-6
+							h2 Advice
+							ul.li--arrow
+								li
+									a(href="#") Benefits
+								li
+									a(href="#") Work
+								li
+									a(href="#") Debt and money
+								li
+									a(href="#") Consumer
+								li
+									a(href="#") Relationships
+								li
+									a(href="#") Housing
+								li
+									a(href="#") Law and rights
+								li
+									a(href="#") Discrimination
+								li
+									a(href="#") Tax
+								li
+									a(href="#") Healthcare
+								li
+									a(href="#") Education
+								li
+									a(href="#") A to Z of advice
+
+						.main-footer__box.col-md-3.col-sm-6
+							h2 Resources and tools
+							ul.li--arrow
+								li
+									a(href="#") Budgeting tool
+								li
+									a(href="#") Advice fact sheets
+								li
+									a(href="#") Advice online, by phone and in person
+
+						.main-footer__box.col-md-3.col-sm-6
+							h2 More from us
+							ul.li--arrow
+								li
+									a(href="#") About us
+								li
+									a(href="#") Annual reports
+								li
+									a(href="#") Contact us
+								li
+									a(href="#") Complaints
+								li
+									a(href="#") Blogs
+								li
+									a(href="#") Campaigns
+								li
+									a(href="#") Media
+								li
+									a(href="#") Policy research
+								li
+									a(href="#") Support us
+								li
+									a(href="#") Volunteering
+								li
+									a(href="#") Jobs
+
+						.main-footer__box.col-md-3.col-sm-6
+							h2 About Citizens Advice
+							ul.li--arrow
+								li
+									a(href="#") How we provide advice
+								li
+									a(href="#") The difference we make
+								li
+									a(href="#") Support us
+								li
+									a(href="#") How Citizens Advice works
+								li
+									a(href="#") Accessibility
+								li
+									a(href="#") Disclaimer and copyright
+								li
+									a(href="#") Privacy and cookies
+
+						.main-footer__box.main-footer__box--copyright
+							div
+								p
+									img(alt="", height="100", src="#{dir}images/ca-logo_100px.svg", width="100")
+									| Copyright © 2016 Citizens Advice. All rights reserved.
+									br
+									| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
+									br
+									| VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England
+									br
+									| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
 		else
 			footer.main-footer(data-track-zone="footer", id="footer")
