Fixed focus colour for search fields

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -165,6 +165,7 @@ input[type="password"],
 input[type="number"],
 input[type="text"],
 input[type="tel"],
+input[type="search"],
 input[id*="dob-"],
 input[class*="dob-"],
 textarea,
