--- a/libs/jade/forms/field-groups.jade
+++ b/libs/jade/forms/field-groups.jade
@@ -50,7 +50,7 @@ block content
 				fieldset
 					label(for="field") Field group with button
 					.field-group.field-group--buttons
-						input#field(type="text")
+						input#field(type="search")
 						button.btn Search
 			pre
 				code.language-html
