Fixed focus highlights for field groups so the input no longer loses the right edge

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -396,7 +396,7 @@ input[class*="dob-"] {
     }
     input {
         border-radius: 0;
-        border-right: 0;
+        //border-right: 0;
         width: 100%;
         display: inline-block;
     }
@@ -478,6 +478,7 @@ input[class*="dob-"] {
         select {
             .ie(width,100%);
             border: 2px solid @gray-6;
+            border-left: 0;
         }
     }
     input:first-of-type {
