Add date fields for testing

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -25,6 +25,7 @@ html.no-js
 		link(href="#{dir}css/guide.css", rel="stylesheet")
 		link(href="#{dir}images/favicon/32.png", rel="shortcut icon")
 		link(href="#{dir}images/favicon/228.png", rel="apple-touch-icon")
+		link(href="#{dir}dev/datepicker/css/bootstrap.css", rel="stylesheet")
 
 		script
 			include ../js/head.js
