--- a/public/js/datepicker/css/bootstrap.css
+++ b/public/js/datepicker/css/bootstrap.css
@@ -91,7 +91,7 @@
 button.Zebra_DatePicker_Icon                { display: block; position: absolute; width: 16px; height: 16px; background: url('../images/calendar.png') no-repeat left top; text-indent: -9000px; border: none; cursor: pointer; padding: 0; line-height: 0; vertical-align: top }
 button.Zebra_DatePicker_Icon_Disabled       { background-image: url('../images/calendar-disabled.png') }
 */
-input[type="text"] {
+input.Zebra_DatePicker_Icon-brand[type="text"] {
     background-image: url("./assets/images/yellow-calendar.svg") !important;
     background-repeat: no-repeat !important;
     background-position: center right .6em !important;
