--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -25,10 +25,11 @@ html.no-js
 		link(href="#{dir}css/guide.css", rel="stylesheet")
 		link(href="#{dir}images/favicon/32.png", rel="shortcut icon")
 		link(href="#{dir}images/favicon/228.png", rel="apple-touch-icon")
-		link(href="#{dir}js/datepicker/css/bootstrap.css", rel="stylesheet")
 
 		script
 			include ../js/head.js
+
+		block head
 
 	body
 		<!--[if IE 8]><div class="ie8"><![endif]-->
@@ -337,4 +338,3 @@ html.no-js
 				$('.section-nav a[href*="' + filename + '"]').addClass('active');
 			});
 		block script
-		block script-bottom
