--- a/libs/jade/dev/field-groups-date.jade
+++ b/libs/jade/dev/field-groups-date.jade
@@ -7,6 +7,7 @@ block script
 	script(src="#{dir}js/datepicker/js/jquery-1.12.0.js")
 	script(src="#{dir}js/datepicker/js/zebra_datepicker.js")
 	script(src="#{dir}js/datepicker/js/core.js")
+	link(href="#{dir}js/datepicker/css/bootstrap.css", rel="stylesheet")
 
 extends /template/template.jade
 
