Added a yellow-lighter

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -71,7 +71,8 @@
 @aqua:             			#81CEC6;
 @aqua-light:          		lighten(@aqua, 15%);
 @yellow:           			#FFBF47;
-@yellow-light:     			lighten(@yellow, 25%); // #FFEBC6
+@yellow-light:     			lighten(@yellow, 27.5%); // #FFEBC6
+@yellow-lighter:			#fffacd;
 @yellow-dark:				darken(@yellow, 30%);
 @purple:					#947ACA;
 @purple-dark:				darken(@purple, 25%);
