--- a/libs/site.less
+++ b/libs/site.less
@@ -81,7 +81,7 @@
 @import "modules/adviser";
 @import "modules/notice";
 @import "modules/slide";
-@import "modules/pinbar";
+@import "modules/savebar";
 
 /* IE styles */
 @import "base/ie";
